...
      );
    }

    return (
      <div className="toggle-button" onClick={onHaveTagsClick}>
        <span className={`toggle-text ${isHaveTagsActive ? 'active' : ''}`}>
          TAGS
        </span>

        {haveTagsSubLabel && (
          <span className={`toggle-text toggle-subtext ${isHaveTagsActive ? 'active' : ''}`}>
            {haveTagsSubLabel}
          </span>
...
        </div>
      );
    }
    return (
      <div className="toggle-button" onClick={onWishlistClick}>
        <span className={`toggle-text ${isWishlistActive ? 'active' : ''}`}>
          WISHLIST
        </span>
        {wishlistSubLabel && (
          <span className={`toggle-text toggle-subtext ${isWishlistActive ? 'active' : ''}`}>
            {wishlistSubLabel}
          </span>
        )}
...
